fix spacing at top for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ h1.style3{
 h1.style4{
   font-size: 1.5em;
   font-style: italic;
-  line-height:5px;
+  line-height:15px;
 }
 h1.style5{
   font-size: .5em;
@@ -106,7 +106,7 @@ h1.style5{
  }
 
 .space-small { 
-  margin-top: 35px; 
+  margin-top: 30px; 
 }
 
 .space-big { 
